@@ -6,6 +6,7 @@
  - Move code for check 'files_dir' parameter to image() method.
  - Rewrite Changes file to CPAN::Changes::SPEC format.
  - Update Image::Keyboard doc to my standard.
+ - Update LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.19 version.
  - Update author name.
  - Update author github username.
